--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ body {
     margin: 0 auto;
     height: 80px;
     width: 576px;
-    background: url("images/title.png") no-repeat center center/contain; }
+    background: url("images/title.gif") no-repeat center center/contain; }
   .homepage .page-title .name {
     font-size: 24px;
     color: #4a4a4a;
