--- a/index.scss
+++ b/index.scss
@@ -35,7 +35,7 @@ body {
       margin: 0 auto;
       height: 80px;
       width: 576px;
-      background: url("images/title.png") no-repeat center center/contain;
+      background: url("images/title.gif") no-repeat center center/contain;
     }
     .name {
       font-size: 24px;
