--- a/index.scss
+++ b/index.scss
@@ -136,6 +136,14 @@ body {
         background: #ffffff url("images/project12.png") center center/contain;
         box-shadow: rgba(0, 0, 0, 0.06) 0 8px 24px;
       }
+      &-project-l {
+        background: #ffffff url("images/project13.png") center center/contain;
+        box-shadow: rgba(0, 0, 0, 0.06) 0 8px 24px;
+      }
+      &-project-m {
+        background: #ffffff url("images/project14.png") center center/contain;
+        box-shadow: rgba(0, 0, 0, 0.06) 0 8px 24px;
+      }
     }
     @keyframes my-move
     {
@@ -791,6 +799,8 @@ body {
     }
   }
  }
+
+
 
 
 
