--- a/index.scss
+++ b/index.scss
@@ -137,12 +137,12 @@ body {
         box-shadow: rgba(0, 0, 0, 0.06) 0 8px 24px;
       }
       &-project-l {
-        background: #ffffff url("images/project13.png") center center/contain;
+        background: #485f61 url("images/project13.png") center center/contain;
         box-shadow: rgba(0, 0, 0, 0.06) 0 8px 24px;
       }
       &-project-m {
-        background: #ffffff url("images/project14.png") center center/contain;
-        box-shadow: rgba(0, 0, 0, 0.06) 0 8px 24px;
+        background: #ffffff url("images/project15.png") center center/contain;
+        box-shadow: rgba(0, 0, 0, 0.1) 0 8px 24px;
       }
     }
     @keyframes my-move
